--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Hemang Kumar
-email: hemangsk@gmail.com
+title: Tiambe Hooper
+email: tiambe48@gmail.com
 
 #write html inside the double quotes to display in jumbotron
-description: "<h3>Hello, world!</h3><h1>DevJournal</h1><h3>Awesome Jekyll Theme for Developers!</h3>Hope you like it!"
+description: "<h3>Full Stack Developer</h3><h1>DevJournal</h1><h3>Front End & Back-End Enineering with Java</h3>Hope you like it!"
 
 
 
 baseurl: "/DevJournal" # the subpath of your site, e.g. /blog
 url: "http://hemangsk.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+
+github_username:  itteez
 
 # Build settings
 markdown: kramdown
